--- a/dir/thumb3link/style.css
+++ b/dir/thumb3link/style.css
@@ -4,12 +4,14 @@ html, body {
 }
 canvas {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
-  z-index: 1;
 }
 
 .dropbutton {
@@ -18,6 +20,7 @@ canvas {
   padding: 16px;
   font-size: 16px;
   border: none;
+  z-index: -1;
 }
 
 .dropdown-content{
@@ -43,12 +46,5 @@ canvas {
 }
 
 .dropdown:hover .dropbutton {
-  background-color: #f1f1f1;
-}
-
-.center-image {
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 25%
+  background-color: #3e8e41;
 }
