--- a/style.css
+++ b/style.css
@@ -53,12 +53,14 @@ canvas {
 
 .center-image {
   display:block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 25%
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 25%;
+ 
 }
+
 
 .zoom:hover {
   transition: transform .2s;
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
